Done: created an initial structure for blades and scss files
-  managed routes for initial page and login redirect
- created views/scss new folders and file for handle layouts and components
- 3 layouts -> home, main, dashboard
- changed some style in scss to differenciate layouts

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+// layouts
+@import 'layouts/dashboard-layout.scss';
+@import 'layouts/home-layout.scss';
+@import 'layouts/main-layout.scss';
