--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10942,3 +10942,31 @@ a.text-dark:focus {
   }
 }
 
+#dashboard-header {
+  background-color: lightgreen;
+}
+
+#dashboard-title {
+  text-align: center;
+}
+
+#dashboard-title h1 {
+  color: green;
+}
+
+#home-header {
+  background-color: lightcoral;
+}
+
+#home-title {
+  text-align: center;
+}
+
+#home-title h1 {
+  color: red;
+}
+
+#main-header {
+  background-color: lightskyblue;
+}
+
