WIP: link immagini

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10958,6 +10958,76 @@ a.text-dark:focus {
   background-color: lightcoral;
 }
 
+/* stile footer */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.footer-bg {
+  background-color: #2E3333;
+  min-height: 300px;
+  width: 100%;
+}
+
+.footer-bg .footer-card-container {
+  width: 60%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 0;
+}
+
+.footer-bg .footer-card {
+  background-color: #434848;
+  padding: 15px;
+  width: calc(100%/4.2);
+  height: 95%;
+  color: white;
+  border-radius: 5px;
+}
+
+.footer-bg .footer-card li {
+  list-style: none;
+  padding: 5px 0;
+}
+
+.footer-bg .footer-card li .footer-bolder {
+  font-weight: bolder;
+  font-size: 1.3rem;
+  margin-bottom: 10px;
+}
+
+.footer-bg .footer-card li a {
+  text-decoration: none;
+  color: white;
+}
+
+.footer-bg .second-card-footer {
+  height: 353px;
+}
+
+.footer-bg .icons-footer {
+  width: 60%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 15px;
+}
+
+.footer-bg .icons-footer i {
+  color: white;
+  padding: 0 5px;
+  font-size: 22px;
+}
+
+.footer-bg .copyright-footer {
+  color: gray;
+}
+
 #home-title {
   text-align: center;
 }
