--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11081,6 +11081,86 @@ a.text-dark:focus {
   left: 600px;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.main-carousel {
+  width: 100%;
+  height: 400px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-carousel .carousel-span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  padding-bottom: 10px;
+  padding-right: 5px;
+  top: 45%;
+  font-weight: bold;
+  height: 40px;
+  width: 40px;
+  font-size: 50px;
+  color: purple;
+  cursor: pointer;
+  /* left: .5%; */
+  border: 1px solid green;
+  border-radius: 50%;
+  left: 0;
+  z-index: 1;
+  background: white;
+}
+
+.main-carousel .right-arrow {
+  left: 97%;
+  text-align: right;
+}
+
+.main-carousel .section-carousel {
+  width: 98%;
+  height: 150px;
+  background: #f4f4f4;
+  margin: 10px auto;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  overflow-x: auto;
+}
+
+.main-carousel .section-carousel .carousel-images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 100px;
+  position: relative;
+  left: 0;
+  text-align: center;
+  margin: 10px 20px;
+  border: 1px solid red;
+  color: white;
+  transition: 0.5s;
+  border-radius: 5px;
+}
+
+.main-carousel .section-carousel .carousel-images img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
 /* stile footer */
 
 * {
