TO-IMPROVE: add new restaurant
- add image handling

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11342,3 +11342,10 @@ a.text-dark:focus {
   background-color: lightskyblue;
 }
 
+.form-page-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
