--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,5 @@
 @import 'layouts/dashboard-layout.scss';
 @import 'layouts/home-layout.scss';
 @import 'layouts/main-layout.scss';
+@import 'layouts/form-layout.scss';
+
