--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -25,6 +25,10 @@
         flex: 1 1 auto;
         min-height: 100px;
         overflow-y: auto;
+
+        .restaurants-list{
+            
+        }
     }
 }
 
