DONE: adjustments for meeting

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10977,7 +10977,7 @@ a.text-dark:focus {
 }
 
 #home-header {
-  background-color: lightcoral;
+  background-color: #0088f8;
 }
 
 /* stile Jumbotron */
