--- a/resources/sass/components/footer.scss
+++ b/resources/sass/components/footer.scss
@@ -20,7 +20,7 @@
         justify-content: space-between;
         padding: 25px 0;
 
-       .footer-card1{
+       .footer-card{
 
             background-color: #434848;
             padding: 15px;
@@ -38,6 +38,11 @@
 
                     text-decoration: none;
                     color: white;
+                        &:hover,
+                        &:focus,
+                        &:active {
+                        color: #42f1e9;
+                        }
                 }
 
             }
@@ -49,108 +54,12 @@
                 margin-bottom: 10px;
             }
 
-        }
-        .footer-card2{
-
-            background-color: #434848;
-            padding: 15px;
-            width: calc(100%/4.2);
-
-            color: white;
-            border-radius: 5px;
-            height: 430px;
-
-            li{
-
-                list-style: none;
-                padding: 5px 0;
-
-                a{
-
-                    text-decoration: none;
-                    color: white;
+            img{
+                width: 60%;
+                border: 1px solid white;
+                border-radius: 5px;
                 }
-
-            }
-
-            .footer-bolder{
-
-                font-weight: bolder;
-                font-size: 1.3rem;
-                margin-bottom: 10px;
-            }
-
         }
-          .footer-card3{
-
-            background-color: #434848;
-            padding: 15px;
-            width: calc(100%/4.2);
-
-            color: white;
-            border-radius: 5px;
-            height: 430px;
-
-            li{
-
-                list-style: none;
-                padding: 5px 0;
-
-                a{
-
-                    text-decoration: none;
-                    color: white;
-                }
-
-            }
-
-            .footer-bolder{
-
-                font-weight: bolder;
-                font-size: 1.3rem;
-                margin-bottom: 10px;
-            }
-
-        }
-            .footer-card4{
-
-            background-color: #434848;
-            padding: 15px;
-            width: calc(100%/4.2);
-
-            color: white;
-            border-radius: 5px;
-            height: 430px;
-
-            li{
-
-                list-style: none;
-                padding: 5px 0;
-
-                a{
-
-                    text-decoration: none;
-                    color: white;
-
-                    img{
-
-                        width: 60%;
-                        border: 1px solid white;
-                        border-radius: 5px;
-                    }
-                }
-
-            }
-
-            .footer-bolder{
-
-                font-weight: bolder;
-                font-size: 1.3rem;
-                margin-bottom: 10px;
-            }
-
-        }
-
 
     }
 
