--- a/resources/sass/components/carousel.scss
+++ b/resources/sass/components/carousel.scss
@@ -58,7 +58,7 @@
             align-items: center;
             overflow-x: auto;
 
-            .carousel-images{
+            .categories{
 
                 display: flex;
                 justify-content: center;
