--- a/resources/sass/components/jumbotron.scss
+++ b/resources/sass/components/jumbotron.scss
@@ -1,133 +1,50 @@
-/* stile Jumbotron */
-*{
-
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.jumbo{
-    position: relative;
+#jumbotron{
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px;
-    background: radial-gradient(#ffffff,#00aeff);
+    background-color: lightskyblue;
 
-    .infinite{
-
-        position:relative;
-        width: 800px;
-        height: 160px;
-        background: #525252;
-        transform-origin: bottom;
-        transform-style: preserve-3d;
-        transform: perspective(500px) rotateX(30deg);
-
-        &:before{
-        content:'';
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            left: 0;
-            width: 100%;
-            height: 10px;
-            background: linear-gradient(90deg, #fff 0%, #fff 70%, #525252 70%, #525252 100%);
-            background-size: 120px;
-            animation: animate 0.5s linear infinite;
-        }
+    .container{
+        position: relative;
         
-        &:after{
-        content:'';
-        position: absolute;
-        height: 30px;
-        background: #333;
-        bottom: -30px;
-        transform-origin: center;
-        transform: perspective(500px) rotateX(-25deg);
-        }
-
-
-            @keyframes animate{
-
-
-                0%{
-
-                    background-position: 0px;
-                }
-
-                100%{
-
-                    background-position: -120px;
-                }
-
-            }
-
-  
-    }
-
-
-    .modulo-ricerca {
-        position:absolute; 
-        left: 20%;
-        top: 40%;
-        background-color: #f6f6f6;
-        border: 1px solid #DDD;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-        overflow: hidden;
-        padding: 8px;
-        width: 400px;
-
-        #search {
-            border: 1px solid #DDD;
-            -webkit-box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
-            -moz-box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
-            box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
-            -webkit-border-radius: 3px;
-            -moz-border-radius: 3px;
-            border-radius: 3px;
-            color: #999;
-            float: left;
-            font: 16px Lucida Sans, Trebuchet MS, Tahoma, sans-serif;
-            box-sizing: border-box;
-            height: 42px;
-            padding: 10px;
-            width: 490px;
-            }
-
-        #submit {
-            background-color: #00994D;
-            border: 1px solid #008040;
-            -moz-border-radius: 3px;
-            -webkit-border-radius: 3px;
-            border-radius: 3px;
-            color: #FFF;
-            cursor: pointer;
-            height: 42px;
-            float: right;
-            font: 15px Arial, Helvetica;
-            padding: 0;
-            text-shadow: 0 1px 0 rgba(0, 0 ,0, .3);
-            width: 100px; 
+        .searchbar-container{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             
-            &:hover,
-            &:focus,
-            &:active {
-            background-color: #00B359;
+            label{
+                font-size: 32px;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
+            
+            input{
+                width: 250px;
+                height: 40px;
             }
         }
     }
 
-            
-
-            
-
-    .scooter{
-        width: 25%;
+    .search-dropdown{
         position: absolute;
-        top: 10%;
-        left: 600px;
+        top: 300;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: 250px;
+        background-color: #fff;
+
+        ul{
+            list-style: none;
+
+            li{
+                margin: 10px 10px;
+                cursor: pointer;
+            }
+
+            .not-found{
+                color: red;
+            }
+        }
     }
 }
-
