DONE: Crud restaurant and dish
- to do -> edit for both
- to do -> validate data (BE/FE)

--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -35,6 +35,7 @@
 #dashboard-main{
 
     padding: 30px 50px;
+    width: 85%;
 
     .restaurant-actions{
         display: flex;
@@ -79,6 +80,10 @@
             }
         }
     }
+}
+
+.not-visible{
+    opacity: .5;
 }
 
 
