--- a/resources/sass/components/carousel.scss
+++ b/resources/sass/components/carousel.scss
@@ -63,6 +63,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                cursor: pointer;
 
                 width: 300px;
                 height: 100px;
