Done: Added style for rest show

--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -1,1 +1,28 @@
 @import '../components/main-header.scss';
+
+@import '../components/sidebar.scss';
+
+@import '../components/main-content.scss';
+
+@import '../components/footer.scss';
+
+.my-show-user{
+    width: 100%;
+    display: flex;
+    border: 1px solid red;
+
+    .sidebar-part{
+
+        position: fixed;
+        width: 15%;
+        position: fixed;
+        top: 0;
+    }
+
+    .main-content-part{
+        width: 85%;
+        margin-left: 15%;
+    }
+}
+
+
