--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -11,7 +11,6 @@
         width: 80%;
         height: 100%;
         margin: auto;
-        border: 1px solid red;
         padding: 35px 0;
         display: flex;
         justify-content: space-between;
@@ -20,7 +19,8 @@
 
             display: flex;
             flex-direction: column;
-            border: 1px solid yellow;
+            border: 1px solid #00CCBC;
+            border-radius: 5px;
             height: 90%;
             width: 50%;
             margin-left: 40px;
@@ -30,18 +30,39 @@
                 margin-right: 15px;
                 .restaurant-logo{
 
-                    img{}
+                    img{
+                        padding: 10px;
+                        width: 100px;
+                        height: 100px;
+                        border-radius: 50%;
+                    }
                 }
+                .restaurant-name{
+
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 100%;
+
+                }
+
+            }
+            .restaurant-address, .restaurant-email, .restaurant-telephone, .restaurant-description{
+
+            padding: 5px;
+
             }
         }
         .description-right{
 
             display: flex;
             flex-direction: column;
-            border: 1px solid green;
+            border: 1px solid #00CCBC;
+            border-radius: 5px;
             height: 90%;
             width: 40%;
             margin-right: 40px;
+            position: relative;
 
             .card-restaurant{
 
@@ -51,18 +72,48 @@
 
                     width: 100%;
                     height: 150px;
-                    background-color:blue;
+                    /* background-color:blue; */
                     img{
 
-                        width: 100px;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        object-position: center;
 
+                    }
+                }
+                .tempo-consegna{
 
+                    position: absolute;
+                    top: 115px;
+                    right: 20px;
+                    background-color: white;
+                    height: 70px;
+                    border: 2px solid #00CCBC;
+                    border-radius: 25px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 10px;
+
+                }
+
+                .delivery-cost, .allow-cash{
+
+                    padding: 5px;
+                }
+
+                .allow-cash{
+
+                    .input-radio-margin{
+                        margin-top: 10px;
                     }
                 }
 
             }
 
         }
+
     }
 
 }
@@ -84,3 +135,9 @@
     background-color: white;
     color: black;
 }
+
+
+
+
+
+
