--- a/resources/sass/components/carousel.scss
+++ b/resources/sass/components/carousel.scss
@@ -36,7 +36,7 @@
         left: 0;
         z-index: 1;
         background: white;
-    }
+        }
 
         .right-arrow{
 
@@ -87,8 +87,9 @@
                     object-position: center
                 }
         }
-
+    }
 }
 
-
+.active{
+    opacity: .3;
 }
