--- a/resources/sass/components/carousel.scss
+++ b/resources/sass/components/carousel.scss
@@ -58,6 +58,7 @@
             align-items: center;
             overflow-x: auto;
 
+
             .categories{
 
                 display: flex;
@@ -72,7 +73,6 @@
                 text-align: center;
 
                 margin: 10px 20px;
-                border: 1px solid red;
                 color: white;
 
 
@@ -84,10 +84,32 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
-                    object-position: center
+                    object-position: center;
+                    border-radius: 5px;
                 }
+
+                .carousel-layover{
+
+                    position:absolute;
+                    height: 100%;
+                    width: 100%;
+                    border-radius: 5px;
+                    background-color: rgba($color: #000000, $alpha: 0.4);
+
+
+                }
+
+                .carousel-string{
+
+                    position: absolute;
+                    right: 20px;
+                    bottom: 10px;
+                    color: white;
+                    font-size: 15px;
+                    z-index: 5;
+                }
+            }
         }
-    }
 }
 
 .active{
