--- a/resources/sass/components/jumbotron.scss
+++ b/resources/sass/components/jumbotron.scss
@@ -7,21 +7,23 @@
 
     .container{
         position: relative;
-        
+
         .searchbar-container{
             display: flex;
             flex-direction: column;
             align-items: center;
-            
+
             label{
                 font-size: 32px;
                 font-weight: 600;
                 text-transform: uppercase;
             }
-            
+
             input{
                 width: 250px;
                 height: 40px;
+                border: none;
+                border-radius: 5px;
             }
         }
     }
