--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -1,113 +1,121 @@
-.protected-restaurant-show-top-container{
+.show-restaurant{
+    background-color: lightskyblue;
 
-    width: 100%;
-    background-color: white;
-    height: 400px;
-    border-top: 1px solidgrey;
-    border-bottom: 1px solid grey;
-
-    .restaurant-show-info-container{
+    .protected-restaurant-show-top-container{
 
         width: 80%;
-        height: 100%;
         margin: auto;
-        padding: 35px 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        .description-left{
+        background-color: white;
+        height: 400px;
+        border-bottom: 1px solid grey;
 
+        .restaurant-show-info-container{
+
+            width: 100%;
+            height: 100%;
+            margin: auto;
+            padding: 35px 0;
             display: flex;
-            flex-direction: column;
-            border: 1px solid #00CCBC;
-            border-radius: 5px;
-            height: 90%;
-            width: 50%;
-            margin-left: 40px;
-            .restaurant-logo-name{
-
-                display: flex;
-                margin-right: 15px;
-                .restaurant-logo{
-
-                    img{
-                        padding: 10px;
-                        width: 100px;
-                        height: 100px;
-                        border-radius: 50%;
-                    }
-                }
-                .restaurant-name{
-
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    width: 100%;
-
-                }
-
-            }
-            .restaurant-address, .restaurant-email, .restaurant-telephone, .restaurant-description{
-
-            padding: 5px;
-
-            }
-        }
-        .description-right{
-
-            display: flex;
-            flex-direction: column;
-            border: 1px solid #00CCBC;
-            border-radius: 5px;
-            height: 90%;
-            width: 40%;
-            margin-right: 40px;
-            position: relative;
-
-            .card-restaurant{
+            justify-content: space-between;
+            align-items: center;
+            background-color: rgb(2, 150, 241);
+            .description-left{
 
                 display: flex;
                 flex-direction: column;
-                .restaurant-img-cover{
+                border: 1px solid #00CCBC;
+                border-radius: 5px;
+                height: 90%;
+                width: 50%;
+                margin-left: 40px;
+                background-color: white;
+                .restaurant-logo-name{
 
-                    width: 100%;
-                    height: 150px;
-                    /* background-color:blue; */
-                    img{
+                    display: flex;
+                    margin-right: 15px;
+                    .restaurant-logo{
+
+                        img{
+                            padding: 10px;
+                            width: 100px;
+                            height: 100px;
+                            border-radius: 50%;
+                        }
+                    }
+                    .restaurant-name{
+
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 100%;
+
+                    }
+
+                }
+                .restaurant-address, .restaurant-email, .restaurant-telephone, .restaurant-description{
+
+                padding: 5px;
+
+                }
+            }
+            .description-right{
+
+                display: flex;
+                flex-direction: column;
+                border: 1px solid #00CCBC;
+                border-radius: 5px;
+                height: 90%;
+                width: 40%;
+                margin-right: 40px;
+                position: relative;
+                background-color: white;
+
+                .card-restaurant{
+
+                    display: flex;
+                    flex-direction: column;
+                    .restaurant-img-cover{
 
                         width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        object-position: center;
+                        height: 150px;
+                        /* background-color:blue; */
+                        img{
+
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            object-position: center;
+
+                        }
+                    }
+                    .tempo-consegna{
+
+                        position: absolute;
+                        top: 115px;
+                        right: 20px;
+                        background-color: white;
+                        height: 70px;
+                        border: 2px solid #00CCBC;
+                        border-radius: 25px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 10px;
 
                     }
-                }
-                .tempo-consegna{
 
-                    position: absolute;
-                    top: 115px;
-                    right: 20px;
-                    background-color: white;
-                    height: 70px;
-                    border: 2px solid #00CCBC;
-                    border-radius: 25px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 10px;
+                    .delivery-cost, .allow-cash{
 
-                }
-
-                .delivery-cost, .allow-cash{
-
-                    padding: 5px;
-                }
-
-                .allow-cash{
-
-                    .input-radio-margin{
-                        margin-top: 10px;
+                        padding: 5px;
                     }
+
+                    .allow-cash{
+
+                        .input-radio-margin{
+                            margin-top: 10px;
+                        }
+                    }
+
                 }
 
             }
@@ -116,24 +124,7 @@
 
     }
 
-}
 
-.categories-spacer{
-
-    height: 50px;
-    width: 100%;
-    background-color: aquamarine;
-    border: 1px solid black;
-}
-
-.dishes-container{
-
-    display: flex;
-    flex-wrap: wrap;
-    min-height: 450px;
-    width: 100%;
-    background-color: white;
-    color: black;
 }
 
 
