--- a/resources/sass/components/home-header.scss
+++ b/resources/sass/components/home-header.scss
@@ -1,3 +1,109 @@
 #home-header{
-    background-color: rgb(0, 136, 248);
+    background-color: white;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    .navbar-brand{
+        display: flex;
+        align-items: center;
+
+        img{
+
+            height: 50px;
+        }
+        .header-logo-span{
+
+            margin-left: 10px;
+            color: #007E8A;
+            font-weight: bolder;
+            margin-bottom: 10px;
+            height: 100%;
+        }
+    }
+
+    #navbarSupportedContent{
+
+        /* background-color: yellow; */
+        display: flex;
+        align-items: center;
+        height: 100%;
+
+
+        .header-slogan{
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            font-family: "Nunito", sans-serif;
+            font-size: 1.3rem;
+            font-weight: bold;
+            color: #007E8A;
+
+        }
+
+        .navbar-button-style{
+
+            border: 2px solid #FABD12;
+            padding: 10px 20px;
+            border-radius: 5px;
+            color: #007E8A;
+            font-weight: bold;
+            margin-right: 10px;
+        }
+        .navbar-color-style{
+
+            color: #007E8A;
+            font-weight: bold;
+        }
+        .navbar-dropdown-style{
+
+            position: absolute;
+            left: 125px;
+            border: 2px solid #FABD12;
+            margin-top: 10px;
+            height: 260px;
+            width: 400px;
+
+        }
+
+        .dropdown-header{
+
+            height: 100px;
+            width: 100%;
+            border-bottom: 1px solid #FABD12;
+            display: flex;
+            img{
+                padding-top: 10px;
+                height: 70px;
+            }
+            .dropdown-header-title{
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 25px;
+                color: #007E8A;
+                font-weight: bold;
+                width: 100%;
+            }
+
+        }
+        .dropdown-welcome{
+
+            color: #007E8A;
+            font-weight: bold;
+            border-bottom: 1px solid #FABD12;
+        }
+
+        .dropdown-actions{
+
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: center;
+        }
+
+
+
+    }
 }
