HOTFIX: Home beahvior

--- a/resources/sass/components/jumbotron.scss
+++ b/resources/sass/components/jumbotron.scss
@@ -30,8 +30,8 @@
 
     .search-dropdown{
         position: absolute;
-        top: 300;
-        left: 50%;
+        top: 330px;
+        left: 347px;
         transform: translate(-50%, 0);
         width: 250px;
         background-color: #fff;
