--- a/resources/sass/layouts/home-layout.scss
+++ b/resources/sass/layouts/home-layout.scss
@@ -4,6 +4,8 @@
 
 @import '../components/footer';
 
+@import '../components/jumbotron';
+
 
 
 .restaurants-container{
@@ -64,5 +66,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
