--- a/resources/sass/layouts/home-layout.scss
+++ b/resources/sass/layouts/home-layout.scss
@@ -6,19 +6,35 @@
 
 @import '../components/jumbotron';
 
+.spacer-precarousel{
 
+    width: 100%;
+    height: 50px;
+    margin: auto;
+    font-size: 25px;
+    color: #007E8A;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: radial-gradient(#FE8F50, gold);
+
+}
 
 .restaurants-container{
-    width: 70%;
+    width: 100%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
+    background: radial-gradient(#FE8F50, #FFC065);
+
 
     .restaurant-card{
         width: 400px;
         flex-shrink: 0;
         margin: 20px auto;
         padding: 15px;
+        background-color: white;
+        border-radius: 5px;
 
         a{
             text-decoration: none;
@@ -47,6 +63,7 @@
             height: 80px;
             align-items: center;
             justify-content: center;
+            color: #007E8A;
         }
 
         .categories-type-list{
@@ -56,6 +73,7 @@
             display: flex;
             align-items: center;
             justify-content: space-around;
+            color: #007E8A;
         }
     }
 }
