--- a/resources/sass/components/jumbotron.scss
+++ b/resources/sass/components/jumbotron.scss
@@ -1,18 +1,18 @@
 #jumbotron{
     height: 550px;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     background-color: white;
     padding: 20px 0;
     background: radial-gradient(#FE8F50, #FFC065);
 
-    .container{
+    .container-jumbotron{
         position: relative;
         height: 100%;
         width: 100%;
         display: flex;
-        justify-content: center;
+        /* justify-content: center; */
         align-items: center;
 
 
@@ -22,12 +22,12 @@
             width: 100%;
             height: 100%;
             position: relative;
-
+            text-align: center;
 
             img{
 
                 height: 100%;
-                width: 100%;
+                width: 98vw;
                 object-fit: cover;
                 border-radius: 5px;
             }
@@ -60,13 +60,13 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                width: 40%;
+                width: 30%;
                 color: #007E8A;
                 position: absolute;
                 top: 200px;
-                left: 300px;
+                left: 35%;
                 background-color: rgba($color: white, $alpha: 0.8);
-                border-radius: 5px;
+                border-radius: 5px 5px 0 0;
                 transition: all ease-in-out;
 
                 label{
@@ -102,12 +102,12 @@
 
     .search-dropdown{
         position: absolute;
-        top: 330px;
-        left: 47%;
+        top: 300px;
+        left: 50%;
         transform: translate(-50%, 0);
         width: 250px;
         background-color: #fff;
-        border-radius: 5px;
+        border-radius: 0px 0px 5px 5px;
 
         ul{
             list-style: none;
