--- a/resources/sass/components/footer.scss
+++ b/resources/sass/components/footer.scss
@@ -7,7 +7,7 @@
 }
 
 .footer-bg{
-    background-color: rgb(97, 129, 199);
+    background-color: #1F8691;
 
     min-height: 300px;
     width: 100%;
@@ -22,11 +22,11 @@
 
        .footer-card{
 
-            background-color: #51d8c1;
+            background-color: #FABD12;
             padding: 15px;
             width: calc(100%/4.2);
             height: 430px;
-            color: #0c41a3;
+            color: #1F8691;
             border-radius: 5px;
 
             li{
