--- a/resources/sass/components/jumbotron.scss
+++ b/resources/sass/components/jumbotron.scss
@@ -3,9 +3,8 @@
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    background-color: white;
     padding: 20px 0;
-    background: radial-gradient(#FE8F50, #FFC065);
+    background-color: #1F8691;
 
     .container-jumbotron{
         position: relative;
