--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -1,5 +1,5 @@
 .show-restaurant{
-    background-color: lightskyblue;
+    background-color: #1F8691;
 
     .protected-restaurant-show-top-container{
 
@@ -18,12 +18,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: rgb(2, 150, 241);
+            background-color: #FABD12;
             .description-left{
 
                 display: flex;
                 flex-direction: column;
-                border: 1px solid #00CCBC;
                 border-radius: 5px;
                 height: 90%;
                 width: 50%;
@@ -62,7 +61,6 @@
 
                 display: flex;
                 flex-direction: column;
-                border: 1px solid #00CCBC;
                 border-radius: 5px;
                 height: 90%;
                 width: 40%;
@@ -78,7 +76,7 @@
 
                         width: 100%;
                         height: 150px;
-                        /* background-color:blue; */
+                        
                         img{
 
                             width: 100%;
@@ -95,12 +93,12 @@
                         right: 20px;
                         background-color: white;
                         height: 70px;
-                        border: 2px solid #00CCBC;
-                        border-radius: 25px;
+                        border: 2px solid #1F8691;
+                        border-radius: 50%;
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        padding: 10px;
+                        padding: 20px;
 
                     }
 
