--- a/resources/sass/layouts/home-layout.scss
+++ b/resources/sass/layouts/home-layout.scss
@@ -9,14 +9,14 @@
 .spacer-precarousel{
 
     width: 100%;
-    height: 50px;
+    height: 100px;
     margin: auto;
     font-size: 25px;
-    color: #007E8A;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: radial-gradient(#FE8F50, gold);
+    background-color: #FABD12;
 
 }
 
@@ -25,7 +25,7 @@
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    background: radial-gradient(#FE8F50, #FFC065);
+    background-color: #FABD12;
 
 
     .restaurant-card{
