--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -42,6 +42,7 @@
             display: flex;
             flex-wrap: wrap;
             margin-top: 20px;
+            margin-left: 10px;
 
             .dish-card{
 
@@ -109,6 +110,7 @@
         .container-cart{
 
             margin-top: 55px;
+            margin-right: 40px;
             height: 50%;
             width: 30%;
             background: white;
