--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -89,16 +89,17 @@
                     .tempo-consegna{
 
                         position: absolute;
-                        top: 115px;
+                        top: 100px;
                         right: 20px;
                         background-color: white;
-                        height: 70px;
+                        height: 100px;
                         border: 2px solid #1F8691;
                         border-radius: 50%;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         padding: 20px;
+                        text-align: center;
 
                     }
 
