DONE: Style of checkout/index page
Style in layouts/payment.scss

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,4 +13,4 @@
 @import 'layouts/home-layout.scss';
 @import 'layouts/main-layout.scss';
 @import 'layouts/form-layout.scss';
-
+@import 'layouts/payment.scss';
