--- a/resources/sass/layouts/payment.scss
+++ b/resources/sass/layouts/payment.scss
@@ -63,13 +63,16 @@
                 text-align: center;
                 font-size: 20px;
                 font-weight: bold;
+                text-align: center;
             }
 
 
             .order-recap{
 
+                width: 100%;
                 display: flex;
                 font-weight: bold;
+                justify-content: center;
 
                 .input-label{
 
@@ -84,11 +87,12 @@
                 flex-direction: column;
                 padding: 20px 0;
                 font-weight: bold;
+                align-items: center;
 
                 .span-note{
 
                     position: relative;
-                    bottom: 35px;
+                    bottom: 30px;
                 }
 
                 textarea{
@@ -97,10 +101,6 @@
                     border: 1px solid #7D7D7D;
                 }
 
-                #delivery_address{
-
-                    border: none;
-                }
             }
 
         }
