--- a/resources/sass/layouts/home-layout.scss
+++ b/resources/sass/layouts/home-layout.scss
@@ -6,9 +6,14 @@
 
 @import '../components/jumbotron';
 
+*{
+    scroll-behavior: smooth;
+}
+
 .spacer-precarousel{
 
     width: 100%;
+    height: 100px;
     margin: auto;
     font-size: 25px;
     color: white;
