--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -366,7 +366,7 @@
 
             width: 100%;
             margin: auto;
-
+            background-color: red;
             display: flex;
             justify-content: center;
             margin: 30px 0px;
