--- a/resources/sass/layouts/payment.scss
+++ b/resources/sass/layouts/payment.scss
@@ -1,11 +1,10 @@
 .payment-container{
 
     background-color: aquamarine;
-    height: 95vh;
     width: 70%;
-    margin: 20px auto;
+    margin: auto;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -47,7 +46,6 @@
     .content{
 
         background-color: white;
-        height: 75vh;
         padding: 20px;
         margin: 20px;
         border-radius: 5px;
@@ -70,6 +68,7 @@
             .order-recap{
 
                 width: 100%;
+                height: 100%;
                 display: flex;
                 font-weight: bold;
                 justify-content: center;
@@ -108,8 +107,8 @@
         .payment-credit-card{
 
             background-color: aquamarine;
-            min-height: 300px;
-            padding: 20px;
+            min-height: 190px;
+            /* padding: 20px; */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -121,13 +120,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 190px;
+            height: 50px;
 
             .paybutton{
 
                 font-weight: bold;
                 position: relative;
-                bottom: 40px;
+                top: 10px;
                 transition: all 0.5 ease;
                 background-color: #007E8E;
 
