--- a/resources/sass/components/jumbotron.scss
+++ b/resources/sass/components/jumbotron.scss
@@ -26,9 +26,8 @@
             img{
 
                 height: 100%;
-                width: 99.5vw;
+                width: 100%;
                 object-fit: cover;
-                border-radius: 5px;
             }
 
             .searchbar-container{
