--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -1,5 +1,5 @@
 .show-restaurant{
-    background-color: #1F8691;
+    background-color: #FABD12;
 
     .protected-restaurant-show-top-container{
 
@@ -7,18 +7,17 @@
         margin: auto;
         background-color: white;
         height: 400px;
-        border-bottom: 1px solid grey;
 
         .restaurant-show-info-container{
 
             width: 100%;
             height: 100%;
             margin: auto;
-            padding: 35px 0;
             display: flex;
             justify-content: space-between;
             align-items: center;
             background-color: #FABD12;
+
             .description-left{
 
                 display: flex;
@@ -26,12 +25,12 @@
                 border-radius: 5px;
                 height: 90%;
                 width: 50%;
-                margin-left: 40px;
                 background-color: white;
                 .restaurant-logo-name{
 
                     display: flex;
                     margin-right: 15px;
+
                     .restaurant-logo{
 
                         img{
@@ -63,8 +62,7 @@
                 flex-direction: column;
                 border-radius: 5px;
                 height: 90%;
-                width: 40%;
-                margin-right: 40px;
+                width: 45%;
                 position: relative;
                 background-color: white;
 
