--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -29,7 +29,9 @@
                 .restaurant-logo-name{
 
                     display: flex;
-                    margin-right: 15px;
+                    color: white;
+                    background-color: #1F8691;
+                    border-radius: 5px 5px 0 0;
 
                     .restaurant-logo{
 
@@ -73,31 +75,33 @@
                     .restaurant-img-cover{
 
                         width: 100%;
-                        height: 150px;
-
+                        height: 200px;
+                        
                         img{
 
                             width: 100%;
                             height: 100%;
                             object-fit: cover;
                             object-position: center;
-
+                            border-radius: 5px 5px 0 0;
                         }
                     }
                     .tempo-consegna{
-
+                        
+                        clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 30% 75%, 0 100%, 15% 75%, 0% 75%);
                         position: absolute;
-                        top: 100px;
+                        top: 150px;
                         right: 20px;
-                        background-color: white;
+                        background-color: #FABD12;
+                        color: #1F8691;
                         height: 100px;
-                        border: 2px solid #1F8691;
-                        border-radius: 50%;
+                        border: 2px solid white;
                         display: flex;
                         justify-content: center;
-                        align-items: center;
-                        padding: 20px;
+                        padding: 15px;
                         text-align: center;
+                        font-weight: 600;
+                        font-size: 15px;
 
                     }
 
