--- a/resources/sass/layouts/payment.scss
+++ b/resources/sass/layouts/payment.scss
@@ -55,6 +55,19 @@
             display: flex;
             flex-direction: column;
 
+            input{
+
+                &:valid{
+
+                    border: 2px solid green;
+                }
+
+                &:invalid{
+
+                    border: 2px solid red;
+                }
+            }
+
             .payment-title{
 
                 height: 50px;
