--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -88,8 +88,6 @@
 
             margin-top: 40px;
 
-
-
             ul{
 
                 list-style: none;
@@ -181,117 +179,263 @@
 
         #chart{
 
-            h1{
-                margin-top: 40px;
-            }
+            background-color: #1F8691;
 
-            .chart-btns{
+                .statistic-page{
 
-                display: flex;
-                margin: 50px 20px;
-                align-items: center;
-                justify-content: center;
+                    padding: 20px;
 
-                .main-link{
+                    h1{
 
-                    margin-right: 30px;
-
-                    div{
-                        line-height: 40px;
-                        width: 150px;
-                        text-align: center;
-                        background-color: lightcoral;
-                        color: #fff;
-                        border-radius: 5px;
-                        cursor: pointer;
-
-                        &:hover{
-                            transform: scale(1.1);
-                        }
+                        color: white;
                     }
-                }
 
-                .second-link{
+                .chart-btns{
 
-                    margin-right: 30px;
-
-                    div{
-                        line-height: 40px;
-                        width: 150px;
-                        text-align: center;
-                        background-color: lightseagreen;
-                        color: #fff;
-                        border-radius: 5px;
-                        cursor: pointer;
-
-                        &:hover{
-                            transform: scale(1.1);
-                        }
-                    }
-                }
-
-                .year-restaurant{
-
-                    select{
-                        height: 40px;
-                        width: 150px;
-                        text-align: center;
-                        cursor: pointer;
-                        background-color: lightseagreen;
-                        -webkit-appearance: none;
-                        -moz-appearance: none;
-                        text-indent: 1px;
-                        text-overflow: '';
-                        border: none;
-                        border-radius: 5px;
-                        color: #fff;
-
-                        &:hover{
-                            opacity: .5;
-                        }
-                    }
-                }
-
-                .inner-container{
                     display: flex;
+                    margin: 50px 20px;
+                    align-items: center;
+                    justify-content: center;
+
+                    .main-link{
+
+                        margin-right: 30px;
+                        font-weight: bold;
+
+                        div{
+                            line-height: 40px;
+                            width: 150px;
+                            text-align: center;
+                            background-color: lightcoral;
+                            color: #fff;
+                            border-radius: 5px;
+                            cursor: pointer;
+
+                            &:hover{
+
+                                transform: scale(1.1);
+                                color: #FABD12;
+                            }
+                        }
+                    }
+
+                    .year-restaurant{
+
+                        select{
+
+                            padding-left: 25px;
+                            font-weight: bold;
+
+                            &:hover{
+
+                                transform: scale(1.1);
+                                color: #FABD12;
+                            }
+
+                        }
+                    }
+
+                    .second-link{
+
+                        margin-right: 30px;
+
+                        div{
+                            line-height: 40px;
+                            width: 150px;
+                            text-align: center;
+                            background-color: lightseagreen;
+                            color: #fff;
+                            border-radius: 5px;
+                            cursor: pointer;
+                            font-weight: bold;
+
+                            &:hover{
+
+                                transform: scale(1.1);
+                                color: #FABD12;
+                            }
+                        }
+                    }
+
+                    .year-restaurant{
+
+                        select{
+
+                            height: 40px;
+                            width: 150px;
+                            text-align: center;
+                            cursor: pointer;
+                            background-color: lightseagreen;
+                            -webkit-appearance: none;
+                            -moz-appearance: none;
+                            text-indent: 1px;
+                            text-overflow: '';
+                            border: none;
+                            border-radius: 5px;
+                            color: #fff;
+
+                            &:hover{
+
+                                opacity: .5;
+                            }
+                        }
+                    }
+
+                    .inner-container{
+                        display: flex;
+
+                    }
 
                 }
+
+                .istogram{
+
+                    width: 80%;
+                    margin: auto;
+                    padding-bottom: 40px;
+
+                    #myChart{
+
+                        background-color: white;
+                        border-radius: 5px;
+                        padding: 20px;
+                    }
+                }
+
+                .cake{
+
+                    width: 80%;
+                    margin: auto;
+                    padding-bottom: 40px;
+
+                    #myChart2{
+
+                        background-color: white;
+                        border-radius: 5px;
+                        padding: 20px;
+
+                    }
+                }
+
             }
+
         }
+
     }
 
 
     #orders-history{
 
-        ul{
-            list-style: none;
+        background-color: #1F8691;
 
-            .gone{
-                box-shadow: 0 0.125rem 0.25rem lightgreen!important;
-                border: 1px solid lightgreen;
+        .history-page{
+
+            padding: 20px;
+
+            h1,h2{
+
+                color: white;
+
             }
 
-            .todo{
-                box-shadow: 0 0.125rem 0.25rem lightcoral !important;
-                border: 1px solid lightcoral;
+            ul{
+
+                list-style: none;
+
+                .gone{
+
+                    box-shadow: 0 0.125rem 0.25rem lightgreen!important;
+                    border: 1px solid lightgreen;
+                }
+
+                .todo{
+
+                    box-shadow: 0 0.125rem 0.25rem lightcoral !important;
+                    border: 1px solid lightcoral;
+                }
+
+                .order-card1,{
+
+                    width: 400px;
+                    margin: 30px;
+                    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+                    background: linear-gradient(45deg, white, #FABD12 );
+                    border-radius: 5px;
+
+                    &>div{
+
+                        padding: 10px 5px;
+                    }
+
+                    .timestamp{
+
+                        border-bottom: 2px solid white;
+                        text-align: center;
+                    }
+
+                    .title{
+
+                        font-weight: bold;
+                        font-size: 1.1em;
+                    }
+
+                    .ready-button{
+
+                        button{
+
+                            border: 2px solid #1F8691;
+                            font-weight: bold;
+
+                            &:hover{
+
+                                transform: scale(1.1);
+                            }
+                        }
+
+
+                    }
+                }
+
             }
 
-            .order-card{
-                width: 500px;
-                margin: 30px;
-                box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+            .orders-gone{
 
-                &>div{
+                display: flex;
+                flex-wrap: wrap;
 
-                    padding: 10px 5px;
+                .order-card2{
+
+                    width: 400px;
+                    margin: 30px;
+                    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+                    background-color: #FABD12;
+                    border-radius: 5px;
+
+
+                    &>div{
+
+                        padding: 10px 5px;
+                    }
+
+                    .timestamp{
+
+                        border-bottom: 2px solid white;
+                        font-weight: bold;
+                        border-bottom: 2px solid #1F8691;
+                        text-align: center;
+                    }
+
+                    .title{
+
+                        font-weight: bold;
+                        font-size: 1.1em;
+
+                    }
                 }
 
-                .title{
-                    font-weight: 600;
-                    font-size: 1.1em;
-                }
             }
         }
+
     }
 }
 
