--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -24,7 +24,8 @@
 .element-container{
 
     background-color: #FABD12;
-    padding: 20px 0;
+    padding-top: 20px;
+    padding-bottom: 50px;
 
 
     .restaurant-menu-cointainer{
