DONE: REMOVED ANIMATION for public bug

--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -17,8 +17,8 @@
     justify-content: center;
     color: white;
     font-size: 25px;
-    border-radius: 5px; 
-    
+    border-radius: 5px;
+
 
 }
 
@@ -127,7 +127,7 @@
             }
         }
 
-        
+
 
         .container-cart{
 
@@ -505,7 +505,7 @@
             padding: 0 20px;
         }
 
-        .scooter-animation{
+       /*  .scooter-animation{
 
             width: 150px;
             height: 180px;
@@ -523,7 +523,7 @@
 
             0%   { bottom: 100px; left: -450px; top: 0px; opacity: 1;}
             100% { bottom: 10px; left: 440px; top: 0px; opacity: 1;}
-        }
+        } */
 
     }
 
